<resources>
    <string name="app_name">ToDoApp</string>

    <string name="splash_txt">All Rights Are Preserved</string>
    <string name="txt_toolbar">To Do App</string>

    <string name="login_login">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_username_required">Username Required</string>
    <string name="login_password_required">Password Required</string>
    <string name="login_invalid_login">Invalid Username or Password</string>
    <string name="login_signin">Sign In</string>
    <string name="login_cancel">Cancel</string>

    <string name="quit_application">Do you want to quit application</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="edit_title">Title</string>
    <string name="edit_description">Description</string>
    <string name="edit_date">Date</string>
    <string name="edit_priority">Priority</string>
    <string name="edit_high">High</string>
    <string name="edit_medium">Medium</string>
    <string name="edit_low">Low</string>
    <string name="edit_is_completed">Is Completed</string>
    <string name="edit_save">Save</string>

    <string name="edit_cancel_prompt">Do You Want To Return To Main?</string>
    <string name="edit_delete_all">Do You Want To Delete ALL?</string>
    <string name="edit_logout">Are You Sure, You Want To Logout?</string>


    <string name="crud_save">Todo Saved.</string>
    <string name="crud_update">Todo Updated.</string>

    <string name="crud_deletebyid">Selected item is deleted.</string>
    <string name="crub_deleteall">All items are deleted.</string>

    <string name="edit_update">Update</string>

</resources>
